# Mobile-Env

./: .gitignore  .gitmodules  CHANGELIST  Changelog  Makefile  README-zh.md  README.md  TODO.md  branch_flag  pyproject.toml  screen_analyzer_thread.py  setup.py
android_env/: __init__.py  environment.py  loader.py  utils.py
android_env/components/: action_type.py  adb_controller.py  adb_log_stream.py  app_screen_checker.py  coordinator.py  dumpsys_thread.py  event_listeners.py  log_stream.py  logcat_thread.py  screen_analyzer_thread.py  setup_step_interpreter.py  specs.py  task_manager.py  thread_function.py  vh_analyzer_thread.py
android_env/components/simulators/: base_simulator.py
android_env/components/tools/: __init__.py  easyocr_wrapper.py  naive_functions.py  sbert_holder.py  types.py
android_env/interfaces/: __init__.py  env.py  specs.py  timestep.py
android_env/proto/: adb.proto  task.proto  task_pb2.py.bak
android_env/templates/: agents.py  evaluators.py  libzpp.py  llm_caller.py  prompt_template.py  utils.py
android_env/wrappers/: __init__.py  base_wrapper.py  discrete_action_wrapper.py  dmenv_wrapper.py  flat_interface_wrapper.py  float_pixels_wrapper.py  gym_wrapper.py  image_rescale_wrapper.py  last_action_wrapper.py  recorder_wrapper.py  tap_action_wrapper.py  vh_io_wrapper.py
apps/classic_2048/: classic_2048.textproto  classic_2048.textproto.bak  run_human_test.sh  run_random_test.sh  window_dump.example.xml
apps/classic_2048/2048-apk/: AndroidManifest.xml  resources.arsc
apps/wikihow/: .gitignore  mitmproxy-ca-cert.cer.crt  mitmproxy2.txt  run_human_test.sh  run_random_test.sh  shrink_task_repo.py  wikihow_search.textproto
apps/wikihow/automation/: automation.py  dump.py
apps/wikihow/instruction_rewriting/: .gitignore  extract2csv.py  merge_annotation.py
apps/wikihow/mitmscripts/: .gitignore  accept-url.note  check_responses.py  classify_url.py  collect_web_info.py  create_docs.py  create_fake_database.py  curlget.awk  dump_contributions.py  dump_quizzes.py  extract_urls.py  format_xml.py  generate_index.sh  load_response.py  method-url.note  origin-url.note  referer-url.list  replay_url.py  replay_url2_local.py  replay_url2_server.py  search_test.py  sec_fetch_site-url.note  stopword.list  update_fake_database.py  url-accept_encoding.list  url-accept_language.list  url-content_type.list  url-method.list  url-origin.list  url-patterns  url-range.list  url-referer.list  url-sec_fetch_dest.list  url-sec_fetch_mode.list  (+6 more)
branch-config/: destpath  filelist  ignorelist
build-docker/: .gitignore  BUILD-en.md  BUILD-zh.md  Dockerfile  android-env-web-small.txt  android-package.list  avd.dockerfile  base.dockerfile  frida.dockerfile  install_python.exp  install_sdk.exp  setup_image.sh  syscert.dockerfile
demos/: accessibility_forwarder_clock_set_timer.m.textproto  classic_2048.m.textproto  openmoneybox.add_billings.textproto  systemui_egg_land_default.m.textproto
docs/: dynamic-app-en.md  dynamic-app-zh.md  env-usage-en.md  env-usage-zh.md  other-tools-en.md  other-tools-zh.md  other-tools.md  other_tools.md  task-definition-en.md  task-definition-zh.md
examples/: android-envd.conf.yaml  run_acme_agent.py  run_human_agent.py  run_random_agent.py
examples/template_module_example/: main.py  mobile-env-agent.prompt
tests/: test_css_selector.py  test_sendkey.py
tools/: frida_setup.sh  syscert_setup.exp
tools/annotation-tool/: .gitignore  CHANGELIST  Makefile  README-zh.md  README.md
tools/templates.toolkits/: init_conf.py  modifiers-en.lhs  modifiers-zh.lhs  modifiers.py  parse.py  syntax.ebnf
(+193 files in other folders)
